# zoom-lamp

./: .gitignore  README.md  pyproject.toml
mqtt-listener/: listener.py  main.py
mqtt-server/: run.sh
zoom-status/: mqtt_send.py  zoom-icon.osa  zoomer.js
